--- a/test.html
+++ b/test.html
@@ -1,1 +1,17 @@
-//测试
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title></title>
+   
+</head>
+<style type="text/css"></style>
+<body>
+    
+</body>
+<script>
+//测试测试测试
+</script>
+</html>
+
